# KilobotDetectionLib

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
dataset/videa/: kiloboti_klic.txt
dataset/videa/100_cross_asym_asym_run1/: sci_frame_01869.txt  sci_frame_01893.txt  sci_frame_01965.txt  sci_frame_01989.txt  sci_frame_02061.txt  sci_frame_02085.txt  sci_frame_02157.txt
dataset/videa/100_self_asym_asym_run4/: sci_frame_01905.txt  sci_frame_02141.txt  sci_frame_02146.txt  sci_frame_02153.txt  sci_frame_02156.txt  sci_frame_02160.txt
dataset/videa/aggregation_naive/: aggregation_naive (1).txt  aggregation_naive (10).txt  aggregation_naive (11).txt  aggregation_naive (12).txt  aggregation_naive (13).txt  aggregation_naive (14).txt  aggregation_naive (15).txt  aggregation_naive (16).txt  aggregation_naive (17).txt  aggregation_naive (18).txt  aggregation_naive (19).txt  aggregation_naive (2).txt  aggregation_naive (20).txt  aggregation_naive (21).txt  aggregation_naive (22).txt  aggregation_naive (23).txt  aggregation_naive (24).txt  aggregation_naive (25).txt  aggregation_naive (26).txt  aggregation_naive (27).txt  aggregation_naive (28).txt  aggregation_naive (29).txt  aggregation_naive (3).txt  aggregation_naive (30).txt  aggregation_naive (31).txt  aggregation_naive (32).txt  aggregation_naive (33).txt  aggregation_naive (34).txt  aggregation_naive (35).txt  aggregation_naive (36).txt  aggregation_naive (37).txt  aggregation_naive (38).txt  aggregation_naive (39).txt  aggregation_naive (4).txt  aggregation_naive (40).txt  aggregation_naive (43).txt  aggregation_naive (44).txt  aggregation_naive (45).txt  aggregation_naive (5).txt  aggregation_naive (50).txt  (+10 more)
dataset/videa/bodyguard/: bodyguard (1).txt  bodyguard (10).txt  bodyguard (11).txt  bodyguard (12).txt  bodyguard (13).txt  bodyguard (14).txt  bodyguard (15).txt  bodyguard (16).txt  bodyguard (17).txt  bodyguard (18).txt  bodyguard (19).txt  bodyguard (2).txt  bodyguard (20).txt  bodyguard (21).txt  bodyguard (22).txt  bodyguard (23).txt  bodyguard (24).txt  bodyguard (25).txt  bodyguard (26).txt  bodyguard (27).txt  bodyguard (28).txt  bodyguard (29).txt  bodyguard (3).txt  bodyguard (30).txt  bodyguard (31).txt  bodyguard (32).txt  bodyguard (4).txt  bodyguard (5).txt  bodyguard (6).txt  bodyguard (7).txt  bodyguard (8).txt  bodyguard (9).txt  desktop.ini
dataset/videa/caterpillar/: caterpillar (1).txt  caterpillar (10).txt  caterpillar (11).txt  caterpillar (12).txt  caterpillar (13).txt  caterpillar (14).txt  caterpillar (15).txt  caterpillar (16).txt  caterpillar (17).txt  caterpillar (18).txt  (+50 more)
doc/proj/: Doxyfile
examples/: CMakeLists.txt  camera_calibration_load_example.cpp  camera_calibration_store_example.cpp  detector_and_tracker_example.cpp  distance_example.cpp
examples/LED_detection/: CMakeLists.txt  LED_detection.cpp
examples/calibration_load/: CMakeLists.txt  camera_calibration_load_example.cpp
examples/calibration_store/: CMakeLists.txt  camera_calibration_store_example.cpp
examples/detector_and_tracker/: CMakeLists.txt  detector_and_tracker_example.cpp
examples/distance/: CMakeLists.txt  distance_example.cpp
examples/live_camera_input/: CMakeLists.txt  live_camera_input.cpp
include/: camera_calibration.h  circles_detector.h  emptyClass.h  euclidian_tracker.h  fps_calculator.h  kilobot.h  kilolib_functions.h  simpletracker.h  yolo_detector.h
src/: camera_calibration.cpp  emptyClass.cpp  euclidian_tracker.cpp  kilolib_functions.cpp  simpletracker.cpp  yolo_detector.cpp
(+514 files in other folders)
